<resources>
    <string name="app_name">digiMICE Panitia</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_have_an_account">Belum punya akun?</string>
    <string name="status">Status</string>
    <string name="register">Register</string>
    <string name="tab_1">Pilih Paket Event</string>
    <string name="tab_2">Tambah Anggota</string>
    <string name="tab_3">Upload Materi</string>
    <string name="tab_4">Tambah Pemateri</string>
    <string name="tab_1_event">Edit Event</string>
    <string name="tab_2_event">Daftar Agenda</string>
    <string name="tab_4_event">Daftar Sesi</string>
    <string name="tab_1_peserta">Presensi Peserta</string>
    <string name="tab_2_peserta">Rekap Peserta</string>
    <string name="tab_1_scan">Scan Qr Code</string>
    <string name="tab_2_scan">Set Qr Code</string>
    <string name="tab_1_pembayaran">Belum Lunas</string>
    <string name="tab_2_pembayaran">Batal</string>
    <string name="tab_3_pembayaran">Lunas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_event">Nama Event</string>
    <string name="tambah_anggota">Tambah anggota</string>
    <string name="name">name</string>
    <string name="panitia">Panitia</string>
    <string name="name_packet">Nama Paket</string>
    <string name="max_participant">Maksimal Peserta</string>
    <string name="price">Harga</string>
    <string name="kelola_paket">Kelola Paket</string>
    <string name="loading">Loading...</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tempat">Tempat</string>
    <string name="alamat">Alamat</string>
    <string name="start">start</string>
    <string name="start_event">Start Event</string>
    <string name="time">Pukul</string>
    <string name="end_event">End Event</string>
    <string name="jenis_absensi">Jenis Absensi</string>
    <string name="banner">Banner</string>
    <string name="choose_packet">Pilih Paket</string>
    <string name="upload">Upload</string>
    <string name="harga_tiket">Harga Tiket Min. 10.000</string>
    <string name="edit_paket">Edit Event</string>
    <string name="session">Sesi</string>
    <string name="nama_sesi">Nama Sesi</string>
    <string name="start_agenda">Start Agenda</string>
    <string name="end_agenda">End Agenda</string>
    <string name="add_agenda">Tambah Agenda</string>
    <string name="nama_agenda">Nama Agenda</string>
    <string name="edit_agenda">Edit Agenda</string>
    <string name="upload_materi">Upload Materi</string>
    <string name="nama_file">Nama File</string>
    <string name="batal">Batal</string>
    <string name="presensi">Presensi</string>
    <string name="tambah_sesi">Tambah Sesi</string>
    <string name="edit_sesi">Edit Sesi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tambah_pemateri">Tambah Pemateri</string>
    <string name="no_identitas">No. Identitas (KTP/KTM/Lainnya)</string>
    <string name="verify_password">Verify Password</string>
    <string name="no_telp">No. Telp</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="instansi">Instansi (Boleh Kosong)</string>
    <string name="set_qr_code">Set QR Code</string>
    <string name="change_camera">Change Camera</string>
    <string name="flash">Flash</string>
    <string name="akun">Akun</string>
    <string name="logout">Logout</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="verify_password_baru">Verify Password Baru</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="bank_mandiri">BANK MANDIRI</string>
    <string name="tidak_ada_data">Tidak Ada Data</string>
    <string name="search">Search</string>
    <string name="start_session">Start Sesi</string>
    <string name="crop">Crop</string>
    <string name="name_team">Nama Organisasi</string>
    <string name="end_sesi">End Sesi</string>


    <string-array name="presensi">
        <item>Bebas</item>
        <item>Berdasarkan Sesi</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
