<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".Activity.DetailPacket">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/panitia"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name_user_detail_packet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingRight="8dp"
            tools:text="@string/name"/>
        <TextView
            android:id="@+id/team_detail_packet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Team"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/email_user_detail_packet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        tools:text="@string/email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/name_packet"/>

    <TextView
        android:id="@+id/name_detail_packet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        tools:text="@string/name_packet"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/max_participant"/>

    <TextView
        android:id="@+id/max_participant_detail_packet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        tools:text="@string/max_participant"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/price"/>

    <TextView
        android:id="@+id/price_detail_packet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="16dp"
        tools:text="@string/price"/>
    <Button
        android:id="@+id/bt_kelola_paket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelola_paket"
        android:textSize="14sp"
        android:minHeight="0dp"
        android:padding="14dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorButton"
        android:background="@drawable/button_click"/>
</LinearLayout>