<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:text="@string/nama_lengkap"/>

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:paddingLeft="16dp"
            android:hint="@string/nama_lengkap"
            android:inputType="text"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:paddingLeft="16dp"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:paddingLeft="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:text="@string/verify_password"/>

        <EditText
            android:id="@+id/re_password_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:paddingLeft="16dp"
            android:hint="@string/verify_password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:text="@string/no_telp"/>

        <EditText
            android:id="@+id/no_telp_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:paddingLeft="16dp"
            android:hint="@string/no_telp"
            android:inputType="phone"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:text="@string/provinsi"/>

        <Spinner
            android:id="@+id/spinner_provinsi_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:dropDownWidth="wrap_content"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:text="@string/kabupaten"/>

        <Spinner
            android:id="@+id/spinner_kabupaten_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_form"
            android:dropDownWidth="wrap_content"
            android:padding="8dp"
            android:spinnerMode="dropdown" />


        <Button
            android:id="@+id/bt_submit_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:background="@drawable/button_click"
            android:textSize="14sp"
            android:minHeight="0dp"
            android:padding="14dp"
            android:backgroundTint="@color/colorButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>
