<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.KelolaEvent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_event_materi"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/nama_event"
            android:textSize="19dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/tempat"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tempat_event_materi"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:text="@string/tempat"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/alamat_event_materi"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/alamat"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tanggal_event_materi"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/start"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_agenda_materi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_agenda"/>

</LinearLayout>
</ScrollView>


