<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddSession">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_event_sesi"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:text="@string/nama_event"
                android:textSize="19dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:text="@string/tempat"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tempat_event_sesi"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:text="@string/tempat"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/alamat_event_sesi"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:text="@string/alamat"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tanggal_event_sesi"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:text="@string/start"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:text="@string/nama_sesi"/>

            <EditText
                android:id="@+id/name_add_session"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_form"
                android:paddingLeft="16dp"
                android:hint="@string/nama_sesi"
                android:inputType="text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingRight="8dp"
                    android:textSize="12sp"
                    android:text="@string/start_session"/>
                <Button
                    android:id="@+id/bt_start_date_session"
                    android:background="@drawable/ic_date_range_black_24dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/start_date_session"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_form"
                android:paddingLeft="16dp"
                android:hint="@string/start_session"
                android:inputType="date"
                android:textSize="16sp" />


            <Button
                android:id="@+id/bt_add_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_sesi"
                android:textSize="14sp"
                android:minHeight="0dp"
                android:padding="14dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_click"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorButton"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>